kubernetes/ingress.yaml
# kubernetes/ingress.yaml (Final HTTP-only version)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovatemart-ingress
  namespace: innovatemart-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
